--- a/src/modules/base/chip/chip.css
+++ b/src/modules/base/chip/chip.css
@@ -30,6 +30,10 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+/* .display-flex {
+    display: flex;
+} */
+
 .avonni-chip {
     max-width: 100%;
     padding-top: var(--avonni-chip-spacing-block-start, 0.25rem);
